# journal

./: Cargo.toml  README.md  justfile
.github/: dependabot.yml
src/: cli.rs  config.rs  crypto.rs  format.rs  handler.rs  lib.rs  main.rs  types.rs  util.rs  validate.rs
src/export/: aws.rs  mod.rs  zip.rs
src/fs/: editor.rs  mod.rs
src/template/: mod.rs
testdata/: rust.md
