# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "journal"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "jn"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
crossterm = "0.27"
anyhow = "1.0.81"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.0"
toml = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
regex = "1.10.4"
ring = "0.17.8"
data-encoding = "2.5.0"
rustyline = "14.0.0"
zip = "0.6.6"
inquire = "0.7.4"
